# local-rag-assistant

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.ci/: ci.yml
queue/001/: diff.patch
queue/002/: diff.patch
queue/003/: diff.patch
queue/004/: diff.patch  msg.txt
queue/005/: diff.patch  msg.txt
queue/006/: diff.patch
queue/007/: diff.patch
queue/008/: diff.patch  msg.txt
queue/009/: diff.patch  msg.txt
queue/010/: diff.patch  msg.txt
queue/011/: diff.patch  msg.txt
queue/012/: diff.patch
queue/013/: diff.patch  msg.txt
src/local_rag/: __init__.py
