[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-rag-assistant"
version = "0.1.0"
description = "Privacy-first RAG over local files — 100% local, no API keys required"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Girisankar G", email = "girisankargopakumar@gmail.com"}]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
ml = ["sentence-transformers>=2.2", "faiss-cpu>=1.7"]
llm = ["ollama>=0.1"]
dev = ["pytest>=7.4", "ruff>=0.4", "pytest-cov"]

[project.scripts]
lra = "local_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
